--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <title>Task Planner для ADHD</title>
-    <!-- Обновлённый мета-тег CSP для разрешения подключения к Firestore и Google API -->
+    <!-- Обновлённая политика безопасности (CSP) -->
     <meta http-equiv="Content-Security-Policy" content="
-      default-src 'self' https://telegram.org https://oauth.telegram.org https://dulcet-yeot-cb2d95.netlify.app https://firestore.googleapis.com https://*.googleapis.com;
+      default-src 'self' https://telegram.org https://oauth.telegram.org https://dulcet-yeot-cb2d95.netlify.app;
       script-src 'self' 'unsafe-inline' 'unsafe-eval' https://telegram.org https://apis.google.com;
       style-src 'self' 'unsafe-inline';
-      img-src 'self' data: https://t.me;
+      img-src 'self' data: https://t.me https://firebasestorage.googleapis.com;
       connect-src 'self' https://firestore.googleapis.com https://*.googleapis.com;
       frame-src 'self' https://oauth.telegram.org;
     ">
-    <!-- Функция onTelegramAuth (если нужна для виджета) -->
+    <!-- Если нужен обратный вызов от Telegram (опционально) -->
     <script>
       function onTelegramAuth(user) {
         console.log("Telegram user:", user);
-        // Здесь можно выполнить дополнительные действия при успешном входе
+        // Дополнительные действия при успешном входе (если нужны)
       }
     </script>
   </head>
   <body>
     <div id="root"></div>
-    <!-- Telegram Login Widget, с data-auth-url, указывающим на Netlify Function -->
+    <!-- Виджет для входа через Telegram -->
     <script async src="https://telegram.org/js/telegram-widget.js?7"
       data-telegram-login="Fegefeuerbot"
       data-size="large"
